--- a/base.css
+++ b/base.css
@@ -7,7 +7,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&display=swap');
 @import url('https://mwittrien.github.io/BetterDiscordAddons/Themes/BlurpleRecolor/BlurpleRecolor.css');
 @import url('https://discord-custom-covers.github.io/usrbg/dist/usrbg.css');
-@import url('https://github.com/FuseIsHere813/GoofyAhhShredBoiBDTheme/blob/main/comic-sans.ttf');
+@import url('https://github.com/RollingsJunk/ShredBoiBDTheme/blob/main/comic-sans.ttf');
 
 button {
 	--accentcolor: var(--accent-alt);
@@ -21,8 +21,8 @@ button {
 	--font-display: var(--font-primary) !important;
 	/* Dark Matter Variables */
 	--avatar-size: 32px;
-  --background-image: url('https://raw.githubusercontent.com/FuseIsHere813/GoofyAhhShredBoiBDTheme/main/ANGRY%20SHREDMID%20CROPPED.png');
-  --home-image: url('https://github.com/FuseIsHere813/GoofyAhhShredBoiBDTheme/blob/main/shredmid.png');
+  --background-image: url('https://raw.githubusercontent.com/RollingsJunk/ShredBoiBDTheme/main/ANGRY%20SHREDMID%20CROPPED.png');
+  --home-image: url('https://github.com/RollingsJunk/ShredBoiBDTheme/blob/main/shredmid.png');
 	--background-solid: #161921;
 	--background-solid-dark: #101218;
 	--background-solid-darker: #0c0e12;
@@ -777,3 +777,60 @@ div[class^="splashBackground"] img {
 	background-position: var(--user-popout-position, center) center;
 	background-image: var(--user-background);
 }
+
+/*
+YO HOW DID SHRED BOI GET IN HERE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%#########################################################################################################################################################%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%#####################################################################################################################################################################%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%####################(((((((((((((((((((((((((((((((((((((((((((((((((((####%&&@@@@@@@@@@@@@@@@@@@@@@@@@@@@&&&&%##(((((((((((((((((((((((((((((((((((((((((((#(#################%%%%%%%%%%%%
+%%%%%%%%%%%############(((((((((((((((((((((((((((((((((((((((((((((((((((((((%&@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&%((/(((((((((((((((((((((((((((((((((((((((((((############%%%%%%%%%
+%%%%%%%%##########((((((((((////////////////////////////////////////////#&@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&#//////////////////////////////////((((((((((##########%%%%%%%
+%%%%%%##########(((((((/////////***********************************/#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%(**************************/////////(((((((#########%%%%%
+%%%%%#########(((((((//////**************,,,,,,,,,,,,,,,,,,,,*,,/&@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&&&&&&&@@@&&&&&&&&&&&&&&@@@@@@@@@&&&&&@&@@@@@@@@&(,,,,,,,,,,,,,,,,,************//////((((((########%%%%
+%%%%########((((((/////*******,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,*&@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@%#(###%&&@@@@@@(,,,,,,,,,,,,,,,,,,,,,,*******/////(((((########%%%
+%%%#########((((/////******,,,,,,,,........................(@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&#((((((#&&&@@@@@/...............,,,,,,,,******////(((((#########%
+%%#########(((((////*****,,,,,,........................ ,&@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&##%&&&%#(((((((#&&&@@@@*.................,,,,,,,****////(((((########%
+%%########(((((////****,,,,,,..........               /@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&((((((%&&%#((((((((%&&@@@&,     ............,,,,,****////(((((########%
+%%########(((((////****,,,,,.......                 /@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&((((((#&&&%((((((((#&&&@@@*         ........,,,,,****////(((((#######%
+%%########(((((///****,,,,,.......                *@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%((((#&&&&&&%((((((%&&&@@@/          ......,,,,,****////(((((#######%
+%%########(((((///****,,,,.......               .&@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@@(          ......,,,,*****///(((((#######%
+%%########(((((///****,,,,.......              *@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@@*         .......,,,,****///(((((#######%
+%#########(((((///****,,,,......            .,(@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@&          .....,,,,,****///(((((#######%
+%#########(((((///****,,,,.......    .*%@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@(         ......,,,,****///(((((#######%
+%%########(((((///****,,,,......  .%@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@#        ......,,,,,****///(((((#######%
+%%########((((////****,,,,.....,%@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@#        ......,,,,,****///(((((#######%
+%%########((((////****,,,,.../@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@#        ......,,,,,****///(((((#######%
+##########((((////****,,,,,/@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@#        .......,,,,****///(((((#######%
+##########((((////****,,,,%@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@@#        .......,,,,****///(((((#######%
+##########((((////****,,*@@@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@&         .......,,,,****///(((((#######%
+##########((((////*****/@@@@@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@&         .......,,,,****///(((((#######%
+##########((((////*****@@@@@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@/        .......,,,,****///(((((#######%
+##########(((((///****#@@@@@@@@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@@&&&&&&&&&&&&&&&&&@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&&&@@@,       .......,,,,****///(((((#######%
+##########(((((///****@@@@@@@@@@@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@@@@@&&&&&&@@@@@@@@@@@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&@@@%.     .......,,,,****///(((((#######%
+##########(((((///****@@@@@@@@@@@@@@@@@@@@@@@@@@&@@@&&&@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&&&&@@%,,/%@@@&&&&&&&&&&&&&&&&&&&&&&@@@@@@@@@@@@@@&&&&&&&&&&&&&&&@@@@%(,......,,#%@&/***///(((((#######%
+##########(((((///****@@@@@@@@@@@@@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@@(,,***(%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&@@@@@@@@@@@@@@@%****///(((((#######%
+##########(((((///****@@@@@@@@@@@@@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@@@@@@@@@&*,,,#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@@@*****///(((((#######%
+##########(((((///****@@@@@@@@@@@@@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&@@@@@@@@@@@@@@@@@@@@@@@@@@&*,,,,,,&@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&&@@@@/,****///(((((#######%
+##########(((((///***,#@@@@@@@@@@@@@@@@@@@@@@@@@&&&&&&&@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#,.....,%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&&%(*(@@@&&&&&&&&&&&&&&&&&&&&&&&&&&@@@&*,,****///(((((#######%
+##########(((((///*****#@@@@@@@@@@@@@@@@@@@@@@@@&&&&&&&&@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*....,.*@@@@@@@@@@@@@@@@@@(,,..              *@@@&&&&&&&&&&&&&&&&&&&&&&&&&@@@#,,,,****///(((((#######%
+##########((((////****,,*@@@@@@@@@@@@@@@@@@@@@@@&&&&&&&&@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%@@@@@@@@&.       .@@@@@@,                   &@@&&&&&&&&&&&&&&&&&&&&&&&@@@#,.,,,,****///(((((#######%
+##########((((////****,,,,(@@@@@@@@@@@@@@@@@@@@@@@@&&&&&&@@@@@@@@@@@@@@@@@@@@@@@@@@@@%(,,.     /@@@%,.....,@@(       ,@@@@@#                    &@@@&&&&&&&&&&&&&&&&&&&&@@@%...,,,,,****///(((((#######%
+##########((((////****,,,,,,*@@@@@@@@@@@@@@@@@@@&&&&@&&&&@@@@@@&#(/,..      .@@@@@@,           *@@@(.......(@@,       %@@@%                     ,@@@&&&&&&&&&&&&&&&&&@@@@/......,,,,****///(((((#######%
+##########((((////****,,,,,...,%@@@@@@@@@@@@@@@@@@@@@@@@&@@@@,              .@@@@@#             %@@(,......*&@#                  .***/%@@&@@@@@@@@@@&&&&&&&&&&&&&&@@@@(. ......,,,,,****///(((((#######%
+##########((((////****,,,,,......,%@@@@@@@@&@@@@@@@@@@@@@@@@@&.              /@@@#              /@@@,......,(@@@@@@@@@@@@@@@@@@@@@@@@@%%%@@@@&&&&&&&&&&&&&&&&&&&&&&&@@@@&,.....,,,,*****///(((((#######%
+##########(((((///*****,,,,........ ./@@@@@@@&@@@@@@@@@@@@@@@@(                        ,***/%&&@@@@@/.....,.,#%%#(********,,,,,.......,%@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&@@@@&*.,,,,,****////(((((#######%
+##########(((((////****,,,,,.........../@@@@@@@@@@@@@@@@@@@@@@@/  .****(&&&&&@@@@@@@@@@@@@@@&&&(***,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,/@@@@@&&&&&&&&&&&&&&&&&&&&&&&&&&&@@@@@@@@(,,,,*****////(((((#######%
+##########(((((////*****,,,,,,...........#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&&&&#****,,,,,,,,,,,,*(%&@@@@@@@@@@@@@@@@@@&#/*,,,,,,,,,(@@@&,./&@@@@@@@@@@@@@@@@@@@@@@@@@@@@&%/,.,.,,,,******////(((((#######%
+##########(((((/////*****,,,,,,,.........,%@@@@@@@@@@@@@@@@@@@@@@@@@@@#,,,,,,,,,,,,,*(%@@@@@@@@%(/*,,,,,,,,,,,,,,,*/(%@@@@@@@&&@@@/,...........,,**************,..........,,,,,,,*****////((((((#######%
+###########(((((/////******,,,,,,,,,,,,.../@@@@@@@@@@@@@@@@@@@@@@@@#&@@@@&(****#@@@@@@@&#/****************************,*/#&@@@@@@@@(,...............................,,,,,,,,,,,******/////(((((########%
+###########((((((//////*******,,,,,,,,,,,,#@@@@@@@@@@@@@@@@@@@@@@@@%,,,*#@@@@@@@@&(*****************************//#&@@@@&#*,,,,,,*#@%,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,*******//////(((((#########%
+#%%#########(((((((//////*****************@@@@@@@@@@@@#/@@@@@@@@@@@&*,,,,*,,/%(@@@@@@@@@&#(//*******/(%&&&@@@@@@@@%/**,**,,,,,,,,,,,,,,,,,,,,,,,,,***,,,,,,,,,*******************///////((((((#########%
+%%%%#########((((((((/////////**********/@@@@@@@@@@#*******/%@@@@@@@/******************/((###((////(((@@@#((((&@%***********************************************************/////////(((((((#########%%%
+%%%%%###########((((((((///////////////#@@@@@@%(//////////////////((/////////////////////////////////%@@&(((((%@%/*//////////////////////////////////////////////////////////////((((((((((#########%%%%
+%%%%%%############((((((((((((((((((/////////(/////////////////////////////////////////////////////(#@@@%((((((%@@@@@&#///////////////////////////////////////////////(/((((((((((((((((###########%%%%%
+%%%%%%%%#############((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((%@@@@@@@%###(#%@@%%&&@%((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((#############%%%%%%%
+%%%%%%%%%%########################(((#(((((((((((((((((((((((((((((((((((((((((((((((((((((##((#@@@&&&&&&@@@@@@@@&&&&&@&((((((((((((((((((((((((((((((((((((((((((((((((#(#####################%%%%%%%%%
+%%%%%%%%%%%%##################################################################################&@@@&&&&&&&&&&&&&&&&&&&&@@%####################################################################%%%%%%%%%%%
+%%%%%%%%%%%%%###############################################################################%@@@&&&&&&&&&&&&&&&&&&&&&&@@&###################################################################%%%%%%%%%%%%
+*/
