--- a/base.css
+++ b/base.css
@@ -19,10 +19,10 @@ button {
 :root {
 	--font-primary: 'Comic Sans MS', sans-serif;
 	--font-display: var(--font-primary) !important;
-	/* Dark Matter Variables */
+	/* ShredBoi Variables */
 	--avatar-size: 32px;
-  --background-image: url('https://raw.githubusercontent.com/RollingsJunk/ShredBoiBDTheme/main/ANGRY%20SHREDMID%20CROPPED.png');
-  --home-image: url('https://github.com/RollingsJunk/ShredBoiBDTheme/blob/main/shredmid.png');
+        --background-image: url('https://raw.githubusercontent.com/RollingsJunk/ShredBoiBDTheme/main/ANGRY%20SHREDMID%20CROPPED.png');
+        --home-image: url('https://raw.githubusercontent.com/RollingsJunk/ShredBoiBDTheme/main/shredmid.png');
 	--background-solid: #161921;
 	--background-solid-dark: #101218;
 	--background-solid-darker: #0c0e12;
