--- a/base.css
+++ b/base.css
@@ -4,10 +4,11 @@
  * The codebase was never designed to be pretty, it was designed to require as little maintenance as possible.
  */
 
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&display=swap');*/
+@import url('https://github.com/RollingsJunk/ShredBoiBDTheme/blob/main/comic-sans.ttf');
 @import url('https://mwittrien.github.io/BetterDiscordAddons/Themes/BlurpleRecolor/BlurpleRecolor.css');
 @import url('https://discord-custom-covers.github.io/usrbg/dist/usrbg.css');
-@import url('https://github.com/RollingsJunk/ShredBoiBDTheme/blob/main/comic-sans.ttf');
+
 
 button {
 	--accentcolor: var(--accent-alt);
