--- a/base.css
+++ b/base.css
@@ -5,7 +5,7 @@
  */
 
 /*@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&display=swap');*/
-@import url('https://github.com/RollingsJunk/ShredBoiBDTheme/blob/main/comic-sans.ttf');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://mwittrien.github.io/BetterDiscordAddons/Themes/BlurpleRecolor/BlurpleRecolor.css');
 @import url('https://discord-custom-covers.github.io/usrbg/dist/usrbg.css');
 
@@ -18,7 +18,7 @@ button {
 /* Root Variables */
 
 :root {
-	--font-primary: 'Comic Sans MS', sans-serif;
+	--font-primary: 'Open Sans', sans-serif;
 	--font-display: var(--font-primary) !important;
 	/* ShredBoi Variables */
 	--avatar-size: 32px;
